Z-index e relative fix

--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,6 @@
 
 .zTry {
   margin: 10px;
-  position: absolute;
+  position: relative;
   z-index: 1;
 }
